--- a/rvc.css
+++ b/rvc.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
-
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 
 header, main, nav, footer, figure, figcaption, aside, section, article {
     display:block; 
@@ -9,6 +9,27 @@ header, main, nav, footer, figure, figcaption, aside, section, article {
     box-sizing: border-box;
 }
 
+.navgrad{
+    z-index : 4; 
+    height: 6vw;
+    width: 15%;
+    float:left;
+    position: fixed;
+    top: 0;
+    margin-left: -10px;
+    background-image: linear-gradient(to right,#FFFFFF, #001F48);
+}
+.navlogo {
+    z-index : 4; 
+    background-image: url(rvclogo4.png);
+    background-repeat: no-repeat;
+    width: 80px;
+    float: left;
+    height: 6vw;
+    margin-left: 2vw;
+    
+}
+
 body {
     font-size: 1em;
     background-image: linear-gradient(to bottom,#FFFFFF, #001F48);
@@ -16,6 +37,7 @@ body {
 }
 
 #wrapper {
+    margin-top: 1%;
     width: 95%;
     margin-left: auto;
     margin-right: auto;
@@ -34,31 +56,33 @@ h1, h2 {
 }
 
 nav {
-    font-family: Times New Roman, serif;
+    z-index : 4; 
+   font-family: 'Poppins', sans-serif;
     position: fixed;
     top: 0;
     right: .2%;
-    height: 4vw;
-    width: 100%;
+    height: 6vw;
+    width: 85%;
     text-align: center;
     background-color: #001F48;
     font-weight: bold;
-    border-top: 4px groove #000000;
-    border-bottom: 4px groove #000000;
 }
-
+nav ul {margin-left: -13vw;}
 #titleHero{
     font-size: 400%;
     letter-spacing: 0.35em;
     font-weight: bolder;
+    margin-top: 0.75em;
     color: #FFFFFF;
-/*
-    text-shadow:
-    -2px -2px 0 #ffd700  ,
-    2px -2px 0 #ffd700  ,
-    -2px 2px 0 #ffd700  ,
-    2px 2px 0 #ffd700  ;
-*/
+    text-shadow: 3px 3px 3px #a38901;
+   
+
+}
+
+
+#divWelcomeParagraph span2 {
+    font-size: 200%;
+    color: #003366;
 }
 
 #divWelcomeParagraph {
@@ -84,12 +108,7 @@ nav a:hover {
 
 nav a {
     text-decoration: none;
-    color: #000000;
-    text-shadow:
-    -1px -1px 0 #FFFFFF  ,
-    1px -1px 0 #FFFFFF  ,
-    -1px 1px 0 #FFFFFF ,
-    1px 1px 0 #FFFFFF  ;
+    color: #FFFFFF;
     padding: 5px;
     border-radius: 10px;
 }
@@ -104,7 +123,19 @@ div {
 
 nav ul li {
     color: #FFFFFF;
-    font-size: 1.6vw;
+    font-size: 2.25vw;
+
+    padding-right: 1.2%;
+    padding-left: 1.2%;
+    display: inline-block;
+    text-decoration: none;
+    list-style-type: none;  
+    clear: both;
+border-right: 3px solid #FFFFFF;
+}
+nav ul li2 {
+    color: #FFFFFF;
+    font-size: 2.25vw;
 
     padding-right: 1.2%;
     padding-left: 1.2%;
@@ -189,7 +220,7 @@ nav ul li {
     background-repeat: no-repeat;
     background-size: cover;
     width: 48%;
-    height: 200px;
+    height: 16vw;
 	max-height: 100%;
 	max-width: 100%;
     border: 2px solid #000000;
@@ -233,8 +264,7 @@ nav ul li {
     clear: both;
     width: 100%;
     padding: 5px;
-    height: 150px;
-    
+    height: 150px;  
 }
 
 #dividerSection {
@@ -243,7 +273,11 @@ nav ul li {
 /*    background-color: #000000;*/
     margin-left: auto;
     margin-right: auto;
-    border-bottom: 2px solid #CDCDCD; 
+    border-bottom: 4px solid #BEC6D1; 
+}
+
+#table2 {
+    display: none;
 }
 
 #dividerSection2 {
@@ -251,7 +285,7 @@ nav ul li {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    border-bottom: 2px solid #CDCDCD; 
+    border-bottom: 4px solid #6C7E95; 
 }
 
 #dividerSection3 {
@@ -260,7 +294,7 @@ nav ul li {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 50px;
-    border-bottom: 2px solid #CDCDCD; 
+    border-bottom: 4px solid #30496B; 
 }
 
 #runningStart {
@@ -303,7 +337,6 @@ nav ul li {
     width: 100%;
     clear: both;
     color: #003366;
-
 }
 
 #niuPartnership h1 {
@@ -338,6 +371,10 @@ nav ul li {
     clear: both;
 }
 
+#mathLableft a {
+    text-decoration: none;
+}
+
 #mathLab h1 {
        color: #003366;
 }
@@ -369,6 +406,10 @@ nav ul li {
 
 }
 
+#trioServicesright a {
+    text-decoration: none;
+}
+
 #trioServices h1 {
     text-align: center;
 }
@@ -391,7 +432,7 @@ nav ul li {
 }
 
 #starlightTheatre {
-    height: 475px;
+    height: 500px;
     width: 100%;
     text-align: center;
     clear: both;
@@ -556,8 +597,7 @@ footer{
     font-size: 1em;
     padding-left: 2px;
     padding-left: 2px;
-	height: 10vw;
-    
+	height: 10vw;    
 }
 
 footer h1 {
@@ -584,13 +624,16 @@ footer h1 {
     position: relative;
     height: 900px;
 }
+
 #gallery ul {list-style-type: none;
     width: 400px; 
     margin-left: 30px;
 }
+
 #gallery ul img {
     width: 125px;
     height: 125px;
+    border-radius: 15px;
 }
 
 #gallery ul span img {
@@ -602,17 +645,25 @@ footer h1 {
      float: left;
 	 padding: 10px; 
 }
+
 #gallery img { border-style: none;
 }
+
 #gallery a { text-decoration: none;
              font-style: italic;  
              color: #eaeaea; 
 }
-#gallery span { position: absolute;
-                left: -1000px;
-              opacity: 0;
-              transition:  opacity 3s ease-in-out; 
+
+#gallery span { 
+    position: absolute;
+    left: -1000px;
+    opacity: 0;
+    transition:  opacity 3s ease-in-out; 
+    font-size: 150%;
+    font-weight: 700;
+    color: #000000;
 }
+
 #gallery a:hover span {     
 			position: absolute;
 			top: 25px;
@@ -620,12 +671,14 @@ footer h1 {
 			text-align: center; 
             opacity: 1; 
 }
+
 figure {    
     position: absolute;
     top: 10px;
     left: 375px; 
     text-align: center; 
     opacity: .25;
+    ;
 }
 
 label{ 
@@ -645,6 +698,7 @@ input [type="submit"] {margin-left: 130px;}
 
 
 @media only screen and (max-width: 1500px) and (min-width: 1243px) {
+  
     #studentStory1 {
         width: 100%;
         height: 550px;
@@ -728,9 +782,23 @@ input [type="submit"] {margin-left: 130px;}
        height: 575px; 
     }
     
+   
     #gallery {
-        height: 770px;
+        height: 1700px;
         position: inherit;
+        margin-left: 180px;
+  
+    }
+    
+    #gallery ul {
+        width: 800px;
+        
+    }
+    
+    #gallery ul img {
+        width: 300px;
+        height: 300px;
+        border-radius: 15px;
     }
 
     
@@ -745,20 +813,28 @@ input [type="submit"] {margin-left: 130px;}
 }
 
 @media only screen and (max-width: 64em) {
+      nav ul li {
+        padding: 2.5px;
+        border-bottom: 3px solid #FFFFFF;
+    }
+     nav ul li2 {
+        padding: 2.5px;
+        border-bottom: 3px solid #FFFFFF;
+    }
     body {
         margin: 0;
         font-size: 0.9em;
     }
     
     #wrapper {
-        margin-top: 7.8em;
+        margin-top: 10em;
         min-width: 0;
         width: 95%;
         box-shadow: none;
         border: none;
     }
       
-     #studentStory1 {
+    #studentStory1 {
         width: 100%;
         height: 670px;
         margin-bottom: 0;
@@ -815,8 +891,21 @@ input [type="submit"] {margin-left: 130px;}
     }
     
     #gallery {
-        height: 770px;
+        height: 1700px;
         position: inherit;
+        margin-left: 40px;
+  
+    }
+    
+    #gallery ul {
+        width: 800px;
+        
+    }
+    
+    #gallery ul img {
+        width: 300px;
+        height: 300px;
+        border-radius: 15px;
     }
       
     nav li {
@@ -835,6 +924,10 @@ input [type="submit"] {margin-left: 130px;}
         padding-left: 0;
         font-size: 1.2em;
         display: inline-grid;    
+    }
+    
+    #table2 {
+        display: none;
     }
     
     nav a {
@@ -868,7 +961,14 @@ input [type="submit"] {margin-left: 130px;}
 }
 
 @media only screen and (max-width: 900px) and (min-width: 590px) {
-    
+      nav ul li {
+        padding: 2.5px;
+        border-bottom: 3px solid #FFFFFF;
+    }
+     nav ul li2 {
+        padding: 2.5px;
+        border-bottom: 3px solid #FFFFFF;
+    }
     .container {
         margin-top: 30px;
         margin-bottom: 30px;
@@ -903,6 +1003,7 @@ input [type="submit"] {margin-left: 130px;}
         width: 100%;
         height: 220px;
     }
+    
     
     #niuPartnershipleft {
       background-image: none; 
@@ -946,7 +1047,8 @@ input [type="submit"] {margin-left: 130px;}
 @media only screen and (max-width: 37.5em) {
     
 	#wrapper {
-        margin-top: 6.5em;
+        
+        margin-top: 12em;
         min-width: 0;
         width:100%;
         box-shadow: none;
@@ -954,7 +1056,8 @@ input [type="submit"] {margin-left: 130px;}
     }
    
 	#titleHero{
-		font-size: 300%;
+		font-size: 150%;
+       margin-top: -0.004px;
 	}
     
     .container1 {
@@ -1012,6 +1115,11 @@ input [type="submit"] {margin-left: 130px;}
     
     nav ul li {
         padding: 2.5px;
+        border-bottom: 3px solid #FFFFFF;
+    }
+     nav ul li2 {
+        padding: 2.5px;
+        border-bottom: 3px solid #FFFFFF;
     }
     
     nav a {
@@ -1125,7 +1233,7 @@ input [type="submit"] {margin-left: 130px;}
     }
     
     #gallery {
-        height: 550px;
+        height: 1800px;
         position: inherit;
         display: inline-block;
     }
@@ -1133,33 +1241,51 @@ input [type="submit"] {margin-left: 130px;}
     
     #gallery ul {
         list-style-type: none;
-        width: 300px; 
-        margin-left: 30px;
+        width: 200px; 
+        margin-left: 45px;
     }
     
     #gallery ul img {
-        width: 80px;
-        height: 80px;
+        width: 150px;
+        height: 150px;
+    }
+    
+    #bottomHero {
+        margin-top: 15px;
+        margin-bottom: 15px;
     }
     
     figure {
         display:none;
     }
-       
+    
+    #table1 {display: none;}
+    
+    #table2 {
+        display: inline-block;
+    }
+          
 	#contactModule{
-		height: 335px;
+		height: 200px;
 	}
 	
     footer {
         padding-top: 0;
-		height: 30vw;
+		height: 31vw;
+    }
+    
+    footer h1{
+        margin-top: -5px;
+        
     }
 
     footer span{
+        
+        display: inline-block;
         font-size: 0.4em;
         font-weight: 400;
-        padding-left: 5px;
-        padding-right: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
 }
